# ferryc_old

./: ferryc.cabal
src/: Algb2DAG.hs  Algb2DOT.hs  Algb2DOTChildNodeIDs.hs  Algb2DOTColors.hs  Algb2DOTLabels.hs  Algb2DOTLabels_LaTex.hs  Algb2DOT_LaTex.hs  Algb2XML.hs  Algb2XMLUtils.hs  Annotater.hs  AttributeNameTransformation.hs  Core2Algb.hs  Core2AlgbOperationDispatch.hs  Core2AlgbUtils.hs  CoreInference_EmptySubLists.hs  CoreRewrite_Append.hs  CoreRewrite_Append2.hs  CoreRewrite_AppendOptimized.hs  CoreRewrite_EmptySubListsAwareAggregates.hs  CoreRewrite_EmptySubListsAwareAppend.hs  Lang.hs  LangAlgb.hs  LangCommon.hs  LangCore.hs  Main.hs  Normalize.hs  Parser.hs  PrettyPrint_Lang.hs  PrettyPrint_LangCore.hs  TI2DAG.hs  TI2Dot.hs  TI2Dot_LaTex.hs  TI2XML.hs  TI2XMLUtils.hs  TypeChecker_RT_GT.hs  XML2Alg.hs  XML2AlgUtils.hs  XML2TI.hs  XPathUtils.hs
src/AlgbRewrites/: AlgbRewrite1.hs  AlgbRewrite2.hs  TIRewrite1.hs  TIRewrite2.hs
src/DB/: DB.hs
src/Props/: COLS.hs  DENSE.hs  ONE.hs  SCHEMA.hs  UNIQUE.hs
src/Utils/: AssociationList.hs  Int.hs
